<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ethercat_slave_description</name>
  <version>0.0.1</version>
  <description>Description package for EtherCAT slave modules</description>
  <maintainer email="mcbed.robotics@gmail.com">Maciej Bednarczyk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ethercat_driver</exec_depend>
  <exec_depend>ethercat_interface</exec_depend>
  <exec_depend>ethercat_generic_slave</exec_depend>
  <exec_depend>ethercat_generic_cia402_drive</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
